--- a/src/components/styles/Boards.module.css
+++ b/src/components/styles/Boards.module.css
@@ -41,6 +41,8 @@
 }
 
 .column {
+  user-select: none;
+  cursor: grab;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   padding: 15px;
