--- a/src/pages/styles/HomePage.module.css
+++ b/src/pages/styles/HomePage.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 50px;
+  margin-top: 20px;
   width: 100vw;  
   height: 100vh; 
   overflow: hidden;
@@ -118,10 +118,6 @@
   font-weight: bold;
 }
 
-:global(.dark) body {
-  background: linear-gradient(135deg, #1a1a1a, #222831, #393e46);
-}
-
 :global(.dark) .boardLink {
   background-color: rgba(255, 255, 255, 0.05);
   color: #e0e0e0;
@@ -146,4 +142,47 @@
 :global(.dark) .deleteBtn {
   background-color: rgba(255, 255, 255, 0.08);
   color: #e0e0e0;
+}
+
+@media (max-width: 768px) {
+  .homeContainer {
+    margin-top: 15px;
+    padding: 0 15px;
+    align-items: center;
+  }
+
+  .boardList {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 100%;
+    max-width: 700px;
+  }
+
+  .boardItem {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+
+  .boardLink {
+    width: 100%;
+    height: 140px;
+    padding-top: 50px;
+    font-size: 24px;
+    margin: 0 auto;
+  }
+
+  .addBoard {
+    width: 100%;
+    height: 140px;
+    padding-top: 10px;
+    font-size: 20px;
+    margin: 0 auto;
+  }
+
+  .deleteBtn, .editBtn {
+    width: 24px;
+    height: 24px;
+  }
 }
